--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,6 @@ go.work.sum
 .vscode/
 
 # Protobuf generated files
-api-products/src/pb/
+api-products_unary/src/pb/
+client_api-products_unary/src/pb/
+
